Team Controller (add team, assign user, remove user, create team)

--- a/GCD0806.csproj
+++ b/GCD0806.csproj
@@ -228,6 +228,10 @@
     <Compile Include="Migrations\202111260304507_MidifyTeamTable.designer.cs">
       <DependentUpon>202111260304507_MidifyTeamTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111291852582_ModifyTeamModel.cs" />
+    <Compile Include="Migrations\202111291852582_ModifyTeamModel.designer.cs">
+      <DependentUpon>202111291852582_ModifyTeamModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -314,6 +318,8 @@
     <Content Include="Views\Team\RemoveUser.cshtml" />
     <Content Include="Views\Admin\CreateManager.cshtml" />
     <Content Include="Views\Team\ShowTeam.cshtml" />
+    <Content Include="Views\Team\ShowUsers.cshtml" />
+    <Content Include="Views\Team\AssignUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -368,6 +374,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202111260304507_MidifyTeamTable.resx">
       <DependentUpon>202111260304507_MidifyTeamTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111291852582_ModifyTeamModel.resx">
+      <DependentUpon>202111291852582_ModifyTeamModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
